force-app/main/default/objects/EmailParameters__c/EmailParameters__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Email Parameters</label>
</CustomObject>