force-app/main/default/objects/EmailParameters__c/fields/API_KEY__c.field-meta.xml
<CustomField>
    <fullName>API_KEY__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>API KEY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>