force-app/main/default/objects/EmailParameters__c/fields/SENDER_EMAIL__c.field-meta.xml
<CustomField>
    <fullName>SENDER_EMAIL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SENDER EMAIL</label>
    <type>Email</type>
</CustomField>