force-app/main/default/objects/EmailParameters__c/fields/Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Template_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Template ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>